--- a/sitetrace-axum/Cargo.toml
+++ b/sitetrace-axum/Cargo.toml
@@ -24,6 +24,8 @@ reqwest = { version = "0.12.8", default-features = false, features = [
 ] }
 tracing = "0.1.40"
 tower-cookies = "0.10.0"
+regex = "1.11.0"
+garde = { version = "0.20.0", features = ["derive"] }
 tracing-subscriber = { version = "0.3.18", features = [
   "chrono",
   "registry",
