--- a/sitetrace-axum/Cargo.toml
+++ b/sitetrace-axum/Cargo.toml
@@ -3,7 +3,7 @@ name = "sitetrace-axum"
 keywords = ["http", "web", "tracing", "analyze"]
 categories = ["asynchronous", "network-programming", "web-programming"]
 description = "Axum client (middleware) for integrating with sitetrace service"
-readme = "README.md"
+readme = "../README.md"
 version = "0.0.1"
 edition = "2021"
 repository = "https://github.com/ghashy/sitetrace-integrations"
