--- a/sitetrace-axum/Cargo.toml
+++ b/sitetrace-axum/Cargo.toml
@@ -7,6 +7,7 @@ readme = "../README.md"
 version = "0.0.1"
 edition = "2021"
 repository = "https://github.com/ghashy/sitetrace-integrations"
+license = "Apache-2.0"
 
 [dependencies]
 axum = { version = "0.7.7", features = ["macros", "tracing"] }
