--- a/sitetrace-axum/Cargo.toml
+++ b/sitetrace-axum/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/ghashy/sitetrace-integrations"
 license = "Apache-2.0"
 
 [dependencies]
+async-io = "2.3.4"
 axum = { version = "0.7.7", features = ["macros", "tracing"] }
 async-trait = "0.1.83"
 axum-core = { version = "0.4" }
